crates/ecosystem/maestria-parsers/tests/snapshots/golden__plain_text_parsed.snap
---
source: crates/ecosystem/maestria-parsers/tests/golden.rs
expression: "&parsed"
---
ParsedArtifact {
    artifact_id: ArtifactId(
        2,
    ),
    chunks: [
        ParsedChunk {
            chunk_id: ChunkId(
                2000007,
            ),
            artifact_id: ArtifactId(
                2,
            ),
            text: "First paragraph.\nStill first.",
            source_span: TextSpan {
                start_line: 1,
                end_line: 2,
            },
        },
        ParsedChunk {
            chunk_id: ChunkId(
                2000008,
            ),
            artifact_id: ArtifactId(
                2,
            ),
            text: "Second paragraph.",
            source_span: TextSpan {
                start_line: 4,
                end_line: 4,
            },
        },
    ],
    cards: [
        CreateCardInput {
            card_id: CardId(
                2900007,
            ),
            artifact_id: ArtifactId(
                2,
            ),
            title: "First paragraph.",
            body: "Parsed 2 textual chunks from notes.txt.",
        },
    ],
}
