crates/ecosystem/maestria-parsers/tests/snapshots/golden__rust_source_parsed.snap
---
source: crates/ecosystem/maestria-parsers/tests/golden.rs
expression: "&parsed"
---
ParsedArtifact {
    artifact_id: ArtifactId(
        3,
    ),
    chunks: [
        ParsedChunk {
            chunk_id: ChunkId(
                3000010,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            text: "use std::fmt;",
            source_span: TextSpan {
                start_line: 1,
                end_line: 2,
            },
        },
        ParsedChunk {
            chunk_id: ChunkId(
                3000011,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            text: "pub struct Thing;",
            source_span: TextSpan {
                start_line: 3,
                end_line: 4,
            },
        },
        ParsedChunk {
            chunk_id: ChunkId(
                3000012,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            text: "impl Thing {",
            source_span: TextSpan {
                start_line: 5,
                end_line: 5,
            },
        },
        ParsedChunk {
            chunk_id: ChunkId(
                3000013,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            text: "pub fn new() -> Self { Self }\n}",
            source_span: TextSpan {
                start_line: 6,
                end_line: 8,
            },
        },
        ParsedChunk {
            chunk_id: ChunkId(
                3000014,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            text: "#[test]\nfn makes_thing() {}",
            source_span: TextSpan {
                start_line: 9,
                end_line: 10,
            },
        },
    ],
    cards: [
        CreateCardInput {
            card_id: CardId(
                3900010,
            ),
            artifact_id: ArtifactId(
                3,
            ),
            title: "use std::fmt;",
            body: "Parsed 5 textual chunks from lib.rs.",
        },
    ],
}
